<resources>
    <string name="app_name">UTTHUB</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="Accueil">Accueil</string>
    <string name="Boite_de_reception">Boite de recéption</string>
   <!-- <string name="UVs">Mes UVs/Cours</string> -->
    <string name="Questions">Poser une question</string>
    <string name="Seance">Les Séances</string>
    <string name="Profil">Profil</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Accueil</item>
        <item>Boite de recéption</item>
        <!--<item>Mes UVs/Cours</item> -->
        <item>Questions</item>
        <item>Séance</item>
        <item>Profil</item>


    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_uvcours">Mes UVs</string>
    <string name="activity_title_Question">Question/Réponse</string>
    <string name="activity_title_schedule">Organiser une séance</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>
