<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_Accueil"
            android:icon="@drawable/home"
            android:title="@string/Accueil" />
        <item
            android:id="@+id/nav_Boite_de_reception"
            android:icon="@drawable/email"
            android:title="@string/Boite_de_reception" />

        <!--<item
            android:id="@+id/nav_UVs"
            android:icon="@drawable/courses"
            android:title="@string/UVs" /> -->

        <item
            android:id="@+id/nav_Questions"
            android:icon="@drawable/questions"
            android:title="@string/Questions" />
        <item
            android:id="@+id/nav_seance"
            android:icon="@drawable/calendar"
            android:title="@string/Seance" />
        <item
            android:id="@+id/nav_Profil"
            android:icon="@drawable/user"
            android:title="@string/Profil" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about_us" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />
        </menu>
    </item>

</menu>
